docker-scripts/ingress/ingress.service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: NodePort
  externalTrafficPolicy: Local
  externalIPs:
    - "192.168.0.50"
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32080

    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 32443
