docker-scripts/ingress/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: arendse.xyz
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.arendse.xyz
    secretName: arendse.xyz-secret
  rules:
  - host: www.arendse.xyz
    http:
      paths:
      - path: /radarr
        backend:
          serviceName: radarr
          servicePort: 7878
      - path: /sonarr
        backend:
          serviceName: sonarr
          servicePort: 8989
